[tool.poetry]
name = "pynalyzer"
version = "0.1.0"
description = "Meta code analysis tool, bundling together multiple code analysis libs"
authors = ["Devourian <dorian.antonkiewicz@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
mypy = "^1.4.1"
black = "^23.3.0"
isort = "^5.12.0"
bandit = "^1.7.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-randomly = "^3.12.0"
pytest-cov = "^4.1.0"
snakeviz = "^2.2.0"
perfplot = "^0.10.2"
Sphinx = "^7.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
